@startuml

rectangle Domain{
    annotation GestorInscripcion <<control>>{
        - inscripcionesReg: int[]
        - inscripcionesApDi: int[]
        - materias: Materia[]
        - materiaCursables: int[]
        --
        ==Core==
        + listarMaterias()
        + listarInscripcines()
        + <b>registrarInscripcion()
        + <b>simularCorrelativas()
        + <b>simularHorarios()
        ==Info==
        + resumenCursada()
        + infoCarrera()
        + infoMateria()
        ==Auxiliar==
        + buscarInscripcionesRegApDi()
        + buscarMaterias()
        + filtrarMateriasDisponibles()
    }

    annotation PantallaInscripcion <<boundary>>{
        - vistaMenuPrincipal
        ==Core==
        - vistaListarMaterias
        - vistaListaInscripciones
        - vistaCrearEditarInscripcion
        - vistaSimularHorarios
        ==Info==
        - vistaResumenCursada
        - vistaInfoCarrera
        - vistaInfoMateria
    }

    class Config {
        - nombreAlumno
        - añoIngreso
    }

    class Carrera {
        - nombre
        - descripcion
        --
        + getMaterias()
    }

    class Inscripcion{
        - fecha
        --
        + esOrdenMateria()
    }

    class Materia {
        - numero_orden: int
        - nombre: String
        - descripcion: String
        - modalidad: String
        - sigla: String
        - correlativas_reg: int[]
        - correlativas_ap: int[]
        --
        + esOrdenMateria()
        + esCursable(corReg, corApDi)
    }

    enum TipoMateria{
        * Principal
        * Electiva
    }

    enum Condicion{
        * Inscripto
        * Aprobado
        * Regular
        * NoCursado
    }

    enum Nota{
        * 0 - 10
    }

    enum Especialidad{
        * Civil
        * Electrica
        * Electronica
        * Industrial
        * Mecanica
        * Metalurgica
        * Quimica
        * Sistemas
        * Basica
    }

    enum Nivel{
        * 1 - 5
    }

    GestorInscripcion --> Config

    GestorInscripcion <.> PantallaInscripcion

    Carrera *--> Materia
    Carrera --> Especialidad

    Materia --> Especialidad
    Materia --> Nivel
    Materia --> TipoMateria

    Inscripcion --> Materia
    Inscripcion --> Condicion
    Inscripcion --> Nota

}

@enduml

